# sourceclip

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dub/: __init__.py  __main__.py  align.py  attribution.py  branding.py  cli.py  config.py  diarize.py  hardware.py  lipsync.py  metadata.py  models.py  music.py  overlays.py  pipeline.py  public_domain.py  shorts.py  social.py  source.py  subtitles.py  transcribe.py  translate.py  tts.py  upload.py  utils.py  video.py
tests/: test_dub.py
